# dragonfly_speech_recognition

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py
compiled_msgs_srvs/dragonfly_speech_recognition/msg/: _Choice.py
compiled_msgs_srvs/dragonfly_speech_recognition/srv/: _GetSpeech.py
compiled_msgs_srvs/msg/: __init__.py
compiled_msgs_srvs/srv/: __init__.py
example_grammars/: gpsr_grammar.fcfg  simple_grammar.fcfg
example_launch/: example.launch
launch/: start.launch
msg/: Choice.msg
scripts/: client  client.py  dragonfly_server  hmi_server_dragonfly_client  ros_server  ros_speech_bridge  ros_speech_bridge_xmlrpc  start_dragonfly_speech_recognition.bat  start_rosnode.bat  test_client.py  test_client_big.py  test_record.py  windows_server_noop
src/dragonfly_speech_recognition/: backup.py  cfgparser.py  client.py  client_dummy.py  dragonfly_client.py  dragonfly_server.py  dragonfly_test.py  dragonfly_wrapper.py  dragonfly_wrapper_stub.py  easy.cfg  get_dragonfly_grammar.py  gpsr.cfg  hmi_server_dragonfly_client.py  options  recorder.py  server.py  speech_recognition.py  test_client.py  test_speech.py  unwrap_grammer.py  vbox.py  wrapper.py  xmlrpc_server.py
srv/: GetSpeech.srv
test/: dragonfly_speech_recognition  sound_recorder  test_dragonfly_client  test_dragonfly_client.py  test_dragonfly_server.py  test_dragonfly_wrapper  test_recorder  test_reset  test_yes_no
