<?xml version="1.0"?>
<package>
  <name>dragonfly_speech_recognition</name>
  <version>0.0.0</version>
  <description>Windows speech on our robots via dragonfly!</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>hmi</run_depend>
  <run_depend>grammar_parser</run_depend>
</package>
